# learn_openai

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
