[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn_openai"
version = "0.0.1"
dependencies = [
    "jupyter",
    "ruff",
    "numpy",
    "openai"
]
requires-python = ">=3.11"
authors = [
    {name = "kasrsf"}
]
description = "Learning openai!"
readme = "README.md"
license = {text = "MIT License"}

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
